
2017-09-01: version 28.2.

change license to MIT
rename 'co3' module to 'resilient'
Add 'docs' for autogenerated package documentation


2017-08-24: version 28.1.

co3: add 'patch' method to SimpleClient for efficient field-level updates

gadget: add '--patch' option
gadget: use 'patch' instead of 'get_put' for '--update' actions
gadget: fix a problem using 'gadget --list' with unicode characters in incident names

resilient-circuits: fix a problem with python3 handling unicode surrogate pairs (e.g. emoji) in action messages
resilient-circuits: add 'idna' and 'punycode' JINJA filters for domain encoding
resilient-circuits: add '--config-file' commandline argument
resilient-circuits: fix various performance and reliability issues


2017-06-22: version 28.0.33

co3: disable the ConfigParser '%' interpolation feature


2017-06-14: version 28.0.30

co3: Add get_const() to get the ConstREST endpoint
co3: Add search() to post to the SearchExREST endpoint (only for v28+ servers)
     (Note: there is no method to call the deprecated 'searchREST' endpoint from earlier versions)
co3: Add --search option and artifact_search.json example to 'gadget'
co3: Fix proxy support, adding config options: proxy_host, proxy_port, proxy_user, proxy_password
co3: Remove 'stomp.py' dependency, resilient_circuits now uses stompest library
co3: New 'res-keyring' command-line utility to store secrets in the keyring
co3: Move the keyring and env argument parser from resilient_circuits into co3,
     so all config files can make use of '^xxx' (keyring) and '$xxx' (environment) values
co3: Add a dependency on 'keyring' package

resilient-circuits: Change the STOMP protocol implementation from 'stomp.py' to 'stompest' library,
     with a significant refactoring, for better reliability and maintainability.
resilient-circuits: Add support for STOMP connections via proxy server.
resilient-circuits: Add a dependency on 'stompest' and 'pysocks' packages