@@ -21,7 +21,7 @@ import sys
 sys.path.insert(0, os.path.abspath("../resilient"))
 sys.path.insert(0, os.path.abspath("../resilient-circuits"))
 sys.path.insert(0, os.path.abspath("../pytest-resilient-circuits"))
-
+import resilient
 
 # -- General configuration ------------------------------------------------
 
@@ -58,9 +58,9 @@ author = u'IBM Resilient'
 # built documents.
 #
 # The short X.Y version.
-version = u''
+version = resilient.__version__
 # The full version, including alpha/beta/rc tags.
-release = u''
+release = resilient.__version__
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
