@@ -2,7 +2,10 @@
 2017-09-01: version 28.2.
 
 change license to MIT
-rename 'co3' module to 'resilient'
+rename 'co3' package to 'resilient'
+    NOTE: The module 'co3' is retained for backward compatibility, and most applications will still work
+      using 'import co3' after this change.  Applications that import from submodules (`import co3.co3.xxx`)
+      must be changed to import from 'resilient' instead.
 Add 'docs' for autogenerated package documentation
 
 
